--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dejanos tu mensaje o pedido de cotización">
     <meta name="keywords" content="contacto">
-
-    <!--Agregar meta-->
-
+    <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -203,8 +201,7 @@
             
             <fieldset class="container-fluid px-3" id="send-button">
                 <div id="formButtons" class="text-center">
-                <button type="submit" class="myButton--rounded fw-bold fs-2 mx-5 px-5 py-2 btn btn-lg">Enviar</button>
-                <button type="button" class="myButton--rounded fw-bold fs-2 mx-5 px-5 py-2 btn btn-lg">Cancelar</button>
+                    <button type="button" class="myButton--rounded fw-bold fs-2 mx-5 px-5 py-2 btn btn-lg">Cancelar</button>
                 </div>
             </fieldset>
             <!--map starts-->
