--- a/pages/experiencias.html
+++ b/pages/experiencias.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Conocé nuestras experiencias y los resultados obtenidos en cada una de ellas">
     <meta name="keywords" content="experiencias, trabajos, realizados, resultados">
-
-    <!--Agregar meta-->
-
+    <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
