--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Conocé nuestros servicios: Aerial Mapping, Certificación de obras, Topografía, Inventarios, SIG y Procesamiento satelital">
     <meta name="keywords" content="topografía, aerofotogrametría, obras, rosario, construcción, relevamiento, imagenes, satelitales, información, geográfica">
-
-    <!--Agregar meta-->
-
+    <!--Favicon-->
     <link rel="shortcut icon" href="../assets/img/logo.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
